--- a/章节 46 - 案例：智慧城市/02 - 城市或园区三维场景构建方式/10 - ExtrudeGeometry 批量渲染建筑物/index.html
+++ b/章节 46 - 案例：智慧城市/02 - 城市或园区三维场景构建方式/10 - ExtrudeGeometry 批量渲染建筑物/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>07 - ShapeGeometry 批量渲染建筑物平面图</title>
+    <title>10 - ExtrudeGeometry 批量渲染建筑物</title>
     <style>
       html,
       body {
