--- a/章节 46 - 案例：智慧城市/02 - 城市或园区三维场景构建方式/11 - ExtrudeGeometry 批量渲染建筑物/index.html
+++ b/章节 46 - 案例：智慧城市/02 - 城市或园区三维场景构建方式/11 - ExtrudeGeometry 批量渲染建筑物/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>09 - 经纬度转墨卡托坐标</title>
+    <title>11 - ExtrudeGeometry 批量渲染建筑物</title>
     <style>
       html,
       body {
