refactor: 调整文件夹命名的数字顺序

--- a/章节 46 - 案例：智慧城市/02 - 城市或园区三维场景构建方式/04 - ShapeGeometry 解析城市几何数据/index.html
+++ b/章节 46 - 案例：智慧城市/02 - 城市或园区三维场景构建方式/04 - ShapeGeometry 解析城市几何数据/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>04 - 访问加载场景的某些或某个模型设置材质</title>
+    <title>04 - ShapeGeometry 解析城市几何数据</title>
     <style>
       html,
       body {
