--- a/章节 46 - 案例：智慧城市/02 - 城市或园区三维场景构建方式/11 - 代码生成的模型导出 gltf 格式/index.html
+++ b/章节 46 - 案例：智慧城市/02 - 城市或园区三维场景构建方式/11 - 代码生成的模型导出 gltf 格式/index.html
@@ -25,7 +25,7 @@
       document.body.appendChild(webGLRenderer.domElement);
 
       // setTimeout(() => {
-      //   exportModel(group, '上海外滩');
+      //   exportModel(group, 'group');
       // }, 10000);
     </script>
   </body>
